; ModuleID = '/home/carl/AnghaBench/jq/src/extr_compile.c_gen_wildvar_binding.c'
source_filename = "/home/carl/AnghaBench/jq/src/extr_compile.c_gen_wildvar_binding.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DUP = common dso_local global i32 0, align 4
@STOREV = common dso_local global i32 0, align 4
@OP_HAS_VARIABLE = common dso_local global i32 0, align 4
@OP_BIND_WILDCARD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*, i32)* @gen_wildvar_binding to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gen_wildvar_binding(i32 %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* @DUP, align 4
  %8 = call i32 @gen_op_simple(i32 %7)
  %9 = load i32, i32* %4, align 4
  %10 = load i32, i32* @STOREV, align 4
  %11 = load i8*, i8** %5, align 8
  %12 = call i32 @gen_op_unbound(i32 %10, i8* %11)
  %13 = load i32, i32* %6, align 4
  %14 = load i32, i32* @OP_HAS_VARIABLE, align 4
  %15 = load i32, i32* @OP_BIND_WILDCARD, align 4
  %16 = or i32 %14, %15
  %17 = call i32 @block_bind(i32 %12, i32 %13, i32 %16)
  %18 = call i32 @BLOCK(i32 %8, i32 %9, i32 %17)
  ret i32 %18
}

declare dso_local i32 @BLOCK(i32, i32, i32) #1

declare dso_local i32 @gen_op_simple(i32) #1

declare dso_local i32 @block_bind(i32, i32, i32) #1

declare dso_local i32 @gen_op_unbound(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
